--- a/index.html
+++ b/index.html
@@ -477,6 +477,24 @@
         <p class="center">👆 <span class="arrows">▲▲▲ ПОСЛЕДНИЙ ШАНС НЕ СТАТЬ МНОЙ ▲▲▲</span> 👆<br>
         Не повторяй мою ошибку</p>
 
+        <!-- Футер -->
+        <div style="background: #111111; padding: 30px 20px; margin-top: 60px; border-top: 2px solid #333; font-size: 14px; color: #888;">
+            <div style="text-align: center; margin-bottom: 20px;">
+                <a href="https://t.me/Vinograd888" style="color: #ff0000; text-decoration: none; font-weight: 700;">📱 Поддержка: https://t.me/Vinograd888</a>
+            </div>
+            
+            <div style="text-align: center; margin-bottom: 15px;">
+                <a href="https://ivesto.ru/conf" style="color: #888; text-decoration: none; margin: 0 10px;">Политика конфиденциальности</a>
+                <a href="https://ivesto.ru/dannie" style="color: #888; text-decoration: none; margin: 0 10px;">Согласие на обработку данных</a>
+                <a href="https://ivesto.ru/oferta" style="color: #888; text-decoration: none; margin: 0 10px;">Оферта</a>
+            </div>
+            
+            <div style="text-align: center; color: #666; font-size: 12px;">
+                Самозанятый Сотников Илья Владимирович<br>
+                ИНН 745000035945
+            </div>
+        </div>
+
     </div>
 
     <script>
