--- a/index.html
+++ b/index.html
@@ -285,7 +285,7 @@
         </div>
 
         <div class="red-block">
-            <h3>СКЛАД. 12 ЧАСОВ. 50 ТЫСЯЧ В МЕСЯЦ.</h3>
+            <h3>СКЛАД. СМЕНА 12 ЧАСОВ. 50 ТЫСЯЧ В МЕСЯЦ.</h3>
             <p class="big">Вот куда ведёт путь "успею потом".</p>
         </div>
 
@@ -378,6 +378,11 @@
             <p class="big red">Что-то, что работает без него.</p>
         </div>
 
+        <div class="black-block">
+            <p class="big white-bold">В этом мире ты либо строишь машину, которая приносит деньги — даже когда ты спишь, болеешь или разводишься...</p>
+            <p class="big red">...либо ты сам — машина, которую используют, пока не выжмут досуха.</p>
+        </div>
+
         <p>"Покажешь?" - попросил я.</p>
 
         <div class="quote">
@@ -441,6 +446,13 @@
 
         <p>Это не случайность.</p>
 
+        <div class="black-block">
+            <p class="big">И ты можешь думать, что это тебя не коснётся.</p>
+            <p class="big">Что у тебя <span class="white-bold">"ещё есть время"</span>.</p>
+            <p class="big red">Но время — это иллюзия.</p>
+            <p class="big red">А потом вдруг — врач, судья, банк. И ты уже не выбираешь.</p>
+        </div>
+
         <p class="white-bold">Но я записал всё. Весь разговор с Игорем.</p>
 
         <p>Всё, что он показал.</p>
@@ -454,6 +466,12 @@
 
         <div class="urgency">
             <p class="big">СКОЛЬКО ЕЩЁ ТЫ БУДЕШЬ ЖДАТЬ?</p>
+        </div>
+
+        <div class="final">
+            <p class="huge red" style="margin-bottom: 20px;">ТЫ НЕ ВЕЧЕН.</p>
+            <p class="big white-bold" style="margin-bottom: 15px;">Но ты можешь сделать так, чтобы деньги были вечными.</p>
+            <p class="big" style="margin-bottom: 30px;">Или ты кормишь себя — или кормишь тех, у кого есть пассивный доход.</p>
         </div>
 
         <!-- Финальный блок с призывом -->
